优化部分界面StatusBar的显示效果

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="wave_start">#aaFF7E37</color>
     <color name="wave_end">#aaEB4438</color>
 
+    <color name="black_overlay">#66000000</color>
 
     <color name="wave_color">#09FFFFFF</color>
 
