--- a/app/src/main/res/layout/banner_view_layout.xml
+++ b/app/src/main/res/layout/banner_view_layout.xml
@@ -5,7 +5,7 @@
     android:clipChildren="false"
     android:orientation="vertical">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/banner_view_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
